--- a/APIDatVe/HeThongQuanLyDatVe/Views/QuanLyDatXe/QuyTrinhDatXe/Buoc1.cshtml
+++ b/APIDatVe/HeThongQuanLyDatVe/Views/QuanLyDatXe/QuyTrinhDatXe/Buoc1.cshtml
@@ -40,6 +40,16 @@
                     <input type="date" class="col-xs-12" ng-model="ngaydi" />
                 </div>
             </div>
+            <div class="col-md-12 text-center" style="margin-top:50px">
+                <button class="btn btn-sm" ng-click="gotoStep(-1)">
+                    <i class="ace-icon fa fa-arrow-left"></i>
+                    Quay lại
+                </button>
+                <button class="btn btn-success btn-sm" ng-click="gotoStep(1)">
+                    Tiếp theo
+                    <i class="ace-icon fa fa-arrow-right icon-on-right"></i>
+                </button>
+            </div>
         </div>
     </div>
 </div>
