--- a/APIDatVe/HeThongQuanLyDatVe/Views/Shared/_Layout.cshtml
+++ b/APIDatVe/HeThongQuanLyDatVe/Views/Shared/_Layout.cshtml
@@ -143,6 +143,13 @@
                                 <b class="arrow"></b>
                             </li>
                         }
+                        <li class="open">
+                            <a href="/QuanLyChuyenXe/DanhSachChuyenXe">
+                                <i class="menu-icon fa fa-caret-right"></i>
+                                Quản lý chuyến xe
+                            </a>
+                            <b class="arrow"></b>
+                        </li>
                     </ul>
                 </li>
                 <li class="open">
@@ -165,6 +172,13 @@
                                 <b class="arrow"></b>
                             </li>
                         }
+                        <li class="open">
+                            <a href="/QuanLyLoTrinh/DanhSachChiTietLoTrinh">
+                                <i class="menu-icon fa fa-caret-right"></i>
+                                Quản lý chi tiết lộ trình
+                            </a>
+                            <b class="arrow"></b>
+                        </li>
                         @if (acceptScreen.Any(x => x == "DanhSachDiemCC"))
                         {
                             <li class="open">
